Refactoring throughout – like change welcome_new_user(user) method to welcome_new(user) and improve code readability, move delete account button to user settings page Users.scss: Get rid of user-delete since button no longer needs to be positioned on users profile. Settings_controller.rb: Have redirect to user_settings instead of user after update password, change wording of messages for updating email and premium subscriptions so it is more clear which subscription you are updating. Transactions_controller.rb: Change wording of method to customer_params_present? when new customer is signing up to Braintree vault, make user_has_premium? one line of code. Users_controller.rb: Remove render :index and render :show from index and show methods, these are unnecessary. Chat_room.rb: Add inclusion validation for chat room title to only be one of the 5 languages offered on the platform. User.rb: Add comments for associations (why I’m keeping certain ones even though I never call them or why I have a has_one vs. a has_many). Settings/show.html.erb, users/show.html.erb: Move delete account button to user settings from users profile.

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -134,13 +134,6 @@
   clear: both;
 }
 
-//padding-left of 265 because standard for all images of width 250px and about 15px of padding between image and user-content.profile
-.user-delete {
-  padding-top: 50px;
-  padding-left: 265px;
-  clear: both;
-}
-
 .search-field {
   width: 60%;
 }
@@ -154,9 +147,6 @@
         float: none;
         width: 100%;
 
-    }
-    .user-delete {
-        padding-left: 15px;
     }
     .reset-password input[type="submit"] {
       margin-top: 10px;
